# training-templates

./: .gitignore  dataset.py  experimenter.ipynb  pyproject.toml  readme.md  requirements.txt  train.py  train_lightning.py
code/: download_dataset.py  experimenter_mnist.ipynb  experimenter_oxford_pets.ipynb  experimenter_oxford_pets_classification.ipynb  experimenter_segmentation.ipynb
code/recipes/: train_mnist.py  train_oxford_pets_classification.py  train_oxford_pets_segmentation.py  train_segmentation_template_lightning.py  train_segmentation_template_pytorch.py  train_vessel_mini_lightning.py
code/recipes/dataset_readers/: mnist.py  vessel_cortex.py  (+2 more)
recipes/mnist/: dataset_mnist.py  experimenter_mnist.ipynb  mnist_dataset.py  mnist_experimenter.ipynb  mnist_train.py  train_mnist.py
recipes/oxford_pets/: dataset_oxford_pets_classification.py  dataset_oxford_pets_segmentation.py  experimenter_oxford_pets_classification.ipynb  experimenter_oxford_pets_segmentation.ipynb  oxford_pets_segmentation.py  train_oxford_pets_classification.py  train_oxford_pets_segmentation.py
recipes/vessel/: dataset_vessel.py  experimenter_vessel.ipynb  experimenter_vessel_manual.ipynb  train_vessel.py  vessel_mini.py
recipes/vessel_crop/: experimenter_vessel_crop.ipynb  train_vessel_crop_lightning.py  train_vessel_crop_pytorch.py  vessel_manual.py
recipes/vessel_pyvane/: dataset_vessel_crop.py  experimenter_vessel_crop.ipynb
training_template/: datasets.py  experimenter_vessmap.ipynb
training_template/recipes/: util.py
util/: download_dataset.py  grad_cam_mnist.ipynb
(+4 files in other folders)
