[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "training-template"
version = "0.0.1"
authors = [
  { name="Cesar Comin"},
]
description = "Scripts for training neural networks."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/chcomin/training-templates"

[tool.setuptools]
packages = ["training_template"]